# irc_tweeter

./: .gitignore  Cargo.toml
config/: default.yml  development.yaml  log4rs.yml
src/: config.rs  ircdb.rs  main.rs  tweeter.rs
