[package]
name = "bash_writter"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
egg-mode = "0.14.0"
rusqlite = "0.23.1"
smol = "0.1.10"
