[package]
name = "bash_writter"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
egg-mode = "0.14.0"
log = "0.4.8"
log4rs = "0.12.0"
rusqlite = "0.23.1"
serde = "1.0.111"
serde_derive = "1.0.111"
structopt = "0.3.14"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0.19"
